<resources>
    <string name="app_name">Bank</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continuetxt">Continue</string>
    <string name="no_account">No account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_logo">Sign Up</string>
    <string name="username">Username</string>
    <string name="drawer_close">1</string>
    <string name="drawer_open">221</string>
    <string name="home">Home</string>
    <string name="currency_converter">Currency converter</string>
    <string name="settings">Settings</string>
    <string name="title_text">Курс валют по ЦБ Российской Федерации</string>
    <string name="exchange_rate">Exchange rate</string>
    <string name="deposit_calcualtor">Deposit calcualtor</string>
    <string name="loan_calculator">Loan Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_summ">Enter the deposit amount</string>
    <string name="enter_the_interest_rate">Enter the interest rate</string>
    <string name="calculate_profit">Calculate profit!</string>
    <string name="enter_the_deposit_period">Enter the deposit period</string>
    <string name="enter_amount_of_loan">Enter amount of loan</string>
    <string name="enter_the_period_of_loan_in_years">Enter the period of loan (in years)</string>
    <string name="calculate">Calculate!</string>
</resources>